@@ -1,3 +1,12 @@
+2001-05-13  Chema Celorio  <chema@celorio.com>
+
+	* internetsharing-conf.in (conf_get_replace_table): initial code for
+	this tool. It is not doing a lot right now
+
+2001-05-12  Chema Celorio  <chema@celorio.com>
+
+	* time-conf.in (xml_parse): small typo
+
 2001-05-12  Hans Petter Jansson  <hpj@ximian.com>
 
 	* time-conf.in: Fixed timezone write bug.
